expand user tag and profile tag models
