# models/profileTag.model.go
@@ -1,10 +1,15 @@
 package models
 
 type ProfileTag struct {
-	ID   int    `gorm:"type:integer;primaryKey"`
-	Name string `gorm:"uniqueIndex;type:varchar(50)"`
+	ID      int    `gorm:"type:integer;primaryKey"`
+	Name    string `gorm:"size:30;not null;unique"`
+	AliasRu string `gorm:"size:30;not null"`
+	AliasEn string `gorm:"size:30;not null"`
 }
 
 type ProfileTagResponse struct {
-	Name string `json:"name"`
+	ID      int    `json:"id"`
+	Name    string `json:"name"`
+	AliasRu string `json:"aliasRu"`
+	AliasEn string `json:"aliasEn"`
 }
